ui/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edc-ui
  namespace: iflex-ui
  labels:
    app: edc-ui
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30000
    protocol: TCP
    name: http
  selector:
    app: edc-ui
