ui/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edc-ui
  namespace: edc-ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: edc-ui.51.178.94.25.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: edc-ui
            port:
              number: 3000
